# CPPTest

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/CPP_Test_Reverse/: CMakeLists.txt
src/CPP_Test_Reverse/src/: main.cpp
src/ReverseLib/: CMakeLists.txt
src/ReverseLib/include/: Glossary.h  Reverse.h
src/ReverseLib/src/: Glossary.cpp  Reverse.cpp
tests/: CMakeLists.txt
tests/resources/: expected.reverse.txt  expected.table.txt  sample-unicode.txt
tests/src/: CPP_Test_Reverse_UnitTest.cpp
